--- a/_posts/2019-08-16-week-01-or-232.md
+++ b/_posts/2019-08-16-week-01-or-232.md
@@ -2,6 +2,7 @@
 layout: post
 title: "Week One. Or is it week 232?"
 author: Alex
+tags:   weeknotes
 ---
 
 100Starlings existed as an entity since the 9th March 2015 - yet in reality… most of the core team assembled around 2014 - we were all working on the same client project, that is, Riccardo, myself, Laszlo, Zoli, Pete and Norbi.
