--- a/_posts/2019-08-24-week-233.md
+++ b/_posts/2019-08-24-week-233.md
@@ -3,6 +3,7 @@ layout: post
 title:  week-233
 date:   2019-08-24 13:33:25 +0100
 author: Riccardo
+tags:   weeknotes
 ---
 Welcome to the second instalment of our weekly notes. We're still getting the
 gist of it, so bear with us while we experiment.
