--- a/_posts/2019-08-31-week-234.md
+++ b/_posts/2019-08-31-week-234.md
@@ -20,6 +20,6 @@ Project Niva is moving forward... quite literally: Lo and behold, the thing can 
 
 As mentioned, Richie is living the digital nomad dream across Europe; after spending some time in Germany, he is currently based somewhere in north-east Spain. He also expressed an interest in sharing some thoughts about his meanderings and experiences in a future post. Watch this space.
 
-Finally, a reminder that most of the team will be at [Code Beam Lite Budapest](http://codesync.global/conferences/code-beam-lite-budapest/) (that's going to be in - surprise - Budapest, Hungary, on 20th September), come talk to us! We will also have a pack of these:
+Finally, a reminder that most of the team will be at [Code Beam Lite Budapest](http://codesync.global/conferences/code-beam-lite-budapest/) (that's going to be in - surprise - Budapest, Hungary, on 20th September), come talk to us! We will also give away a pack of these:
 
 ![Multitool 2019](/img/posts/20190902multitool.jpg "Yes, it opens bottles, among other things"){:height="240px" width="360px"}
