moving words around

--- a/_posts/2020-02-09-week-257.md
+++ b/_posts/2020-02-09-week-257.md
@@ -12,6 +12,7 @@ Truth, as boring as it could be, is that the last few months have been crazy in 
 * <abbr title="A small, elegant, cute, text centric app">Project Cub</abbr> has been progressing as well, and in particular toward the end of the year I celebrated the end of a several weeks long grind through edge cases and browser idiosyncrasies. Oh, that feeling when all those individually crafted, seemingly unrelated pieces eventually join perfectly!
 * We also started work on two new projects: a small prototype for an early stage mobile startup, and another “phase 2” for a company that is doing some mportant work in the green tech space.
 
-We also lost an element of the team: Norbi decided to pursue an opportunity with a friend of his just before the end of the year; as sad as seen him go makes us, we wish him the best of luck in his new venture.
+Finally, we lost an element of the team: Norbi decided to move on and pursue an opportunity with a friend of his just before the end of the year; as sad as seing him go makes us, we wish him the best of luck in his new venture.
+
 This also means that our murmuration is now at least one starling short!
-If you are a software developer and like the idea of working with a fully remote company of decent human beings on projects ranging from moving boxes to fixing climate change, please consider [saying hi](mailto:iwanttowork@100starlings.com)!
+So, If you are a software developer and like the idea of working with a fully remote company of decent human beings on projects ranging from moving boxes to fixing climate change, please consider [saying hi](mailto:iwanttowork@100starlings.com)!
