--- a/_posts/2020-02-09-week-257.md
+++ b/_posts/2020-02-09-week-257.md
@@ -9,7 +9,7 @@ Ok it’s been some time: first a week, then another, then Halloween passed, the
 Truth, as boring as it could be, is that the last few months have been crazy in 100starlings' nest, generally (although not always) in a good way:
 * Alex has been absorbed by the new lead [mentioned in the summer](https://www.100starlings.com/2019/08/24/week-233.html). <abbr title="A highly complex multi layered beast">Project sea lion</abbr> has been a fantastic way for him to flex his software architect muscles, and a real treasure trove of case study materials, as well as a great workbench for our collaboration and project management practices.
 * <abbr title="think generative video processing, in the cloud">Project shoeshine</abbr> grew into something bigger than we expected, and having delivered the phase 1 in early December we’re currently planning phase 2. This project taught me a lot about patience and navigating enterprise bureaucracy, something you don’t often have a chance to do as a small software development cooperative.
-* <abbr title="A small, elegant, cute, text centric app">Project Cub</abbr> has been progressing as well, and in particular toward the end of the year I celebrated the end of a several weeks long grind through edge cases and browser idiosyncrasies. Oh, that feeling when all those individually crafted, seemingly unrelated pieces eventually join perfectly!
+* <abbr title="A small, elegant, cute, text centric app">Project Cub</abbr> has been progressing as well, and in particular toward the end of the year I celebrated the end of a several weeks long grind through edge cases and browser idiosyncrasies. Oh, that feeling when all those individually crafted, seemingly unrelated pieces eventually join perfectly! Which reminds me, I had my mind blown [by this piece on gears](https://ciechanow.ski/gears/). You're welcome.
 * We also started work on two new projects: a small prototype for an early stage mobile startup, and another “phase 2” for a company that is doing some mportant work in the green tech space.
 
 Finally, we lost an element of the team: Norbi decided to move on and pursue an opportunity with a friend of his just before the end of the year; as sad as seing him go makes us, we wish him the best of luck in his new venture.
