topics to include in the post

--- a/_posts/2020-02-21-week-259.md
+++ b/_posts/2020-02-21-week-259.md
@@ -2,7 +2,10 @@
 layout: post
 title:  week-259
 date:   2020-02-21 14:00:18 +0100
-author: 100s team
+author: Laszlo
 tags:   weeknotes
 ---
-What did happen this week?
+
+- launch of til.100starlings.com
+- office find
+- preparations for celebrating 5 years of 100S
