--- a/_posts/2020-02-21-week-259.md
+++ b/_posts/2020-02-21-week-259.md
@@ -8,6 +8,6 @@ tags:   weeknotes
 
 This week we revived the effort to launch [til.100starlings.com](https://til.100starlings.com). It's a site dedicated to short snippets of things we learn throughout the day. The project is based on [Hashrocket's work](https://github.com/hashrocket/tilex) and we hope you will like it.
 
-The effort of Alex and Lajos to find a permanent office in Budapest for the cooperative looks to be paying off. They have found a nice place, spacious, but in need of renovation. The next step is to finalise the contract and downpayment.
+The effort of **Alex** and **Lajos** to find a permanent office in Budapest for the cooperative looks to be paying off. They have found a nice place, spacious, but in need of renovation. The next step is to finalise the contract and downpayment.
 
 This year we will be celebrating 5 years of 100Starlings. We want to do something special for the occasion. It will be probably a retreat at a nice place, but the coronavirus epidemic is making that difficult. We will have to make a decision soon whether to postpone our plans.
