[week-264] links work better with a url

--- a/_posts/2020-03-29-2020-03-27-week-264.md
+++ b/_posts/2020-03-29-2020-03-27-week-264.md
@@ -14,7 +14,7 @@ to adapt to the situation, and having the whole family at home (which is nice, b
 
 Among the achievements from this week:
 
-* The whole team has been busy helping Collect+ adapt and deal with the impact
+* The whole team has been busy helping [Collect+](https://www.collectplus.co.uk) adapt and deal with the impact
   of the pandemic. You're pure awesome ⭐️
 
 * On top of that, **Alex** moved the furniture from our old office in Budapest to the new spot,
