[week-264] put credit where credit is due

--- a/_posts/2020-03-29-2020-03-27-week-264.md
+++ b/_posts/2020-03-29-2020-03-27-week-264.md
@@ -17,7 +17,7 @@ Among the achievements from this week:
 * The whole team has been busy helping [Collect+](https://www.collectplus.co.uk) adapt and deal with the impact
   of the pandemic. You're pure awesome ⭐️
 
-* On top of that, **Alex** moved the furniture from our old office in Budapest to the new spot,
+* On top of that, **Alex** and **Lajos** moved the furniture from our old office in Budapest to the new spot,
 although it's going to be a while before we can enjoy it together. We will get
 there 💪.
 
